--- a/public/css/app.css
+++ b/public/css/app.css
@@ -697,6 +697,10 @@ video {
 .w-4\/5 {
   width: 80%;
 }
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -783,6 +787,9 @@ video {
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.self-auto {
+  align-self: auto;
 }
 .self-start {
   align-self: flex-start;
@@ -1187,12 +1194,23 @@ video {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
 }
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
 .antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.opacity-25 {
+  opacity: 0.25;
 }
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
