--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1583,6 +1583,10 @@ input[type="range"]::-ms-fill-lower {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
+.text-green-800 {
+  --tw-text-opacity: 1;
+  color: rgb(3 84 63 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
